<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">wanAndroidTest</string>
    //fab behavior
    <string name="FabScaleDownShowBehavior">com.example.wanandroidtest.widget.behavior.ScaleDownShowBehavior</string>

    <string name="reload">重试</string>
    <string name="login">登录</string>
    <string name="ic_menu_wan_android">玩Android</string>
    <string name="collect">收藏</string>
    <string name="about_me">关于我</string>
    <string name="setting">设置</string>
    <string name="logout">登出</string>
    <string name="home_pager">主页</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="action_settings">设置</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="double_click_exit_tint">双击退出</string>
    <string name="login_tint">请登录</string>
    <string name="auto_login_success">自动登录成功~</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="failed_to_obtain_banner_data">获取banner信息失败</string>
    <string name="failed_to_obtain_article_list">获取文章数据失败</string>
    <string name="unKnown_error">未知错误</string>
    <string name="http_error">网络失败</string>
    <string name="collect_fail">收藏失败</string>
    <string name="defined_permission_write_external">你拒绝了读取SD卡权限,请授权</string>
    <string name="share">分享</string>
    <string name="open_it_with_browser">用浏览器打开</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="share_type_url">%1$s分享【%2$s】专题：%3$s</string>
    <string name="write_permission_not_allowed">获取写入权限失败</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="failed_to_obtain_knowledge_data">获取知识体系数据失败</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="useful_sites">常用网址</string>
    <string name="action_search">搜索</string>
    <string name="failed_to_obtain_useful_sites_data">获取常用网址数据失败</string>
    //搜索
    <string name="search_tint">发现更多干货</string>
    <string name="hot_search">热搜</string>
    <string name="clear_all">清空</string>
    <string name="history_search">搜索历史</string>
    <string name="search_null_tint">快来搜点干货吧*≧▽≦*</string>

    <string name="failed_to_obtain_top_data">获取热搜数据失败</string>
    <string name="failed_to_obtain_search_data_list">获取搜索数据失败</string>
    <string name="failed_to_obtain_navigation_list">获取导航数据失败</string>
    <string name="install">安装</string>
    <string name="failed_to_obtain_project_list">获取项目数据失败</string>
    <string name="failed_to_obtain_project_classify_data">获取项目分类数据列表失败</string>
    <string name="no_more_data">已无更多数据</string>
    <string name="please_check_the_network">请检查网络是否打开</string>
    <string name="no_collect">大侠，赶快存点干货吧~</string>
    <string name="failed_to_obtain_collect_data">获取收藏数据失败</string>
    <string name="login_in">登陆</string>
    <string name="login_account_tint">请输入账号</string>
    <string name="login_password_tint">请输入密码</string>
    <string name="sing_up_now">立即注册</string>
    <string name="account_password_null_tint">账号或密码不能为空</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="register_fail">注册失败</string>
    <string name="register">注册</string>
    <string name="login_confirm_password_tint">请再次输入密码</string>
    <string name="password_not_same">两次密码不相同</string>
    <string name="logout_tint">退出登录?</string>
    <string name="ok">是</string>
    <string name="no">否</string>
    <string name="title_activity_settings">Settings</string>
    <string name="failed_to_night_mode">切换夜间模式失败┭┮﹏┭┮</string>
    <string name="cache_clean_success">清除缓存成功</string>
    <string name="cache_clean_failed">清除缓存失败</string>


</resources>