<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wan_android"
            android:icon="@drawable/ic_wan_android"
            android:title="@string/ic_menu_wan_android"
            android:checked="true"/>
        <item
            android:id="@+id/nav_my_collect"
            android:icon="@drawable/ic_menu_like"
            android:title="@string/collect"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_me"/>

    </group>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_setting"
        android:title="@string/setting"/>

    <item android:id="@+id/nav_night_mode"
          android:icon="@drawable/ic_night_mode"
          android:title="@string/pref_title_night_mode"/>

    <item android:id="@+id/nav_logout"
          android:icon="@drawable/ic_menu_logout"
          android:title="@string/logout"
          android:visible="false"/>
</menu>
